Switched to body bg instead of bg-slide for mobile compatibility.

--- a/views/about.pug
+++ b/views/about.pug
@@ -1,6 +1,6 @@
 include includes/head.pug
 
-body
+body(style='background: #030303 url("/static/media/bg/' + bg + '.jpg") center/cover no-repeat')
     include includes/nav.pug
     div(id='content' class='container scrollable-container')
         div(class='row align-items-start justify-content-center')
