--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,6 @@
 include includes/head.pug
 
-body
+body(style='background: #030303 url("/static/media/bg/' + bg + '.jpg") center/cover no-repeat')
     include includes/nav.pug
     div(id='content' class='container single-row-center-container')
         div(class='row align-items-center justify-content-center flex-column flex-md-row')
