Fixed some meta tag issues with Pug

--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -8,9 +8,9 @@ html(lang=lang.lang)
     else
       title='Carrie Vrtis'
     meta(charset='utf-8')
-    meta(viewport='width=device-width, initial-scale=1, shrink-to-fit=no')
-    meta(description=lang.meta.description)
-    meta(author='Carrie Vrtis')
+    meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    meta(name='description' content=lang.meta.description)
+    meta(name='author' content='Carrie Vrtis')
     link(rel='icon' type='image/png' href='/static/favicon.png')
     link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm' crossorigin='anonymous')
     link(rel='stylesheet' href='/static/css/global.min.css')
