--- a/static/css/sass/global.sass
+++ b/static/css/sass/global.sass
@@ -20,11 +20,12 @@ html, body
     color: whitesmoke; 
     margin: 0;
     min-width: $min-pg-width;
-    width: auto !important;
-    height: 100%;
     overflow-x: hidden;
 body
     background: $background-color center/cover no-repeat;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 
 a,
 a:visited,
@@ -52,11 +53,17 @@ img
     max-width: 100%;
     max-height: 100%;
 
+#content
+    margin-top: 96px;
+
 .alight
     color: $accent-color-light;
 
 .adark
     color: $accent-color-dark;
+
+.text-right
+    text-align: right;
 
 .text-center
     text-align: center;
@@ -76,11 +83,11 @@ img
     border: 3px solid $background-color;
 
 .single-row-center-container
-    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     align-content: center;
+    flex-grow: 1;
 
 .flex-spacing-container
     width: 90%;
@@ -90,37 +97,28 @@ img
     justify-content: space-evenly;
     align-items: space-around;
     flex-wrap: wrap;
+    flex-grow: 1;
 
 .scrollable-container
-    padding: 112px 0 64px 0;
+    padding-top: 16px;
+    flex-grow: 1;
 
 .img-caption
     font-size: 0.8em;
     font-style: italic;
     margin-bottom: 8px;
 
-/* Background Slides */
-    
-.bg-slide
-    z-index: -999;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-
 /* Navbar */
 
-#nav
+#nav-container
     z-index: 999;
-    position: fixed;
-    top: 0;
-    left: 0;
     background: $background-color;
     background: $background-transparent;
     border-bottom: 3px ridge $background-color;
-    width: 100%;
     min-width: $min-pg-width;
+    margin: 0;
+    padding: 0;
+    position: absolute;
 
 #nav .navbar-brand
     height: 64px;
@@ -270,18 +268,12 @@ img
 
 /* Footer */
 
-#footer
-    z-index: 999;
-    position: fixed;
-    bottom: 0;
-    left: 0;
+#footer-container
     background: $background-color;
     background: $background-transparent;
     border-top: 3px groove $background-color;
     padding-bottom: 0.3em;
     width: 100%;
-    min-width: $min-pg-width;
-    text-align: right;
     color: #909090;
 
 #lang-toggle,
