Fixed Spanish-language home page links redirecting to Locale version.

--- a/views/index.pug
+++ b/views/index.pug
@@ -12,5 +12,5 @@ body(style='background: #030303 url("/static/media/bg/' + bg + '.jpg") center/co
                 h2 #{lang.home.subtext.start}
                     span(id='swaptext' class='adark') #{lang.home.subtext.end[0]}
                 h3
-                    a(href='/about') #{lang.home.aboutlink} &raquo;
+                    a(href=rootDir + 'about') #{lang.home.aboutlink} &raquo;
     include includes/footer.pug
