Corrected conflicts with Bootstrap's native tab css.

--- a/app/static/css/sass/global.sass
+++ b/app/static/css/sass/global.sass
@@ -199,7 +199,7 @@ img
     min-height: 92px;
 
 .project-nav-tab
-    border: 3px ridge $highlight-color;
+    border: 3px ridge $highlight-color !important;
     padding: 8px 4px;
 
 .project-nav-tab.active
