--- a/app/static/css/sass/global.sass
+++ b/app/static/css/sass/global.sass
@@ -83,11 +83,10 @@ img
     border-radius: 8px;
     border: 3px solid $background-color;
 
-.single-row-center-container
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
+.scrollable-content
+    padding-top: 16px;
+
+.flex-grow
     flex-grow: 1;
 
 .flex-spacing-container
@@ -98,10 +97,6 @@ img
     justify-content: space-evenly;
     align-items: space-around;
     flex-wrap: wrap;
-    flex-grow: 1;
-
-.scrollable-container
-    padding-top: 16px;
     flex-grow: 1;
 
 .img-caption
