--- a/app/views/project.pug
+++ b/app/views/project.pug
@@ -1,107 +1,78 @@
-include includes/head.pug
+include includes/header.pug
 
 body(style='background: #030303 url("/static/media/bg/' + bg + '.jpg") center/cover no-repeat')
-    include includes/nav.pug
-    div(id='content' class='container scrollable-container')
-        //- Nav Menu
-        div(class='row' id='project-nav')
-            div(class='col-4 col-xl-3')
-                div(class='nav flex-column nav-pills section' id='project-nav-tabContainer' role='tablist' aria-orientation='vertical')
-                    //- Here, k is a category id and v is category data in full.
-                    each v, k in manifest
-                        unless (k == 'default')
-                            if (k == activeCat)
-                                a(id='project-nav-tab-' + k class='project-nav-tab nav-link active' href='#project-nav-cat-' + k data-toggle='pill' data-caturi=rootDir + activePage + '/' + k  role='tab' aria-controls='project-nav-cat-' + k aria-selected='true')
-                                    if (v.category[lang.lang])
-                                        | #{v.category[lang.lang]}
-                                    else if (v.category.en)
-                                        | #{v.category.en}
-                            else
-                                a(id='project-nav-tab-' + k class='project-nav-tab nav-link' href='#project-nav-cat-' + k data-toggle='pill' data-caturi=rootDir + activePage + '/' + k role='tab' aria-controls='project-nav-cat-' + k aria-selected='false')
-                                    if (v.category[lang.lang])
-                                        | #{v.category[lang.lang]}
-                                    else if (v.category.en)
-                                        | #{v.category.en}
-            //- Begin making the tab panes for nav.
-            div(class='col-8 col-xl-9')
-                div(class='project-nav-content tab-content section' id='project-nav-tabContent')
-                    each v, k in manifest
-                        unless (k == 'default')
-                            if (k == activeCat)
-                                div(id='project-nav-cat-' + k class='project-nav-cat tab-pane fade show active' role='tabpanel' aria-labelledby='project-nav-tab-' + k)
-                                    include ./includes/project-nav.pug
-                            else
-                                div(id='project-nav-cat-' + k class='project-nav-cat tab-pane fade' role='tabpanel' aria-labelledby='project-nav-tab-' + k)
-                                    include ./includes/project-nav.pug
-        //- Project Description
-        div(class='row align-items-start justify-content-center')
-            div(class='col-12 col-md-4 col-xl-3')
-                div(id='project-description' class='section')
-                    h2(class='alight') #{projectData.name}
-                    if (projectData.subtitle && projectData.subtitle[lang.lang])
-                        h3(class='adark') #{projectData.subtitle[lang.lang]}
-                    else if (projectData.subtitle && projectData.subtitle.en)
-                        h3(class='adark') #{projectData.subtitle.en}
-                    if (projectData.description && projectData.description.text && projectData.description.text[lang.lang])
-                        hr
-                        each v in projectData.description.text[lang.lang]
-                            p #{v}
-                    else if (projectData.description && projectData.description.text && projectData.description.text.en)
-                        hr
-                        each v in projectData.description.text.en
-                            p #{v}
-                    if (projectData.url)
-                        a(href=projectData.url target='_blank')
-                            | #{projectData.url}
-                    if (projectData.urlInstruction)
-                        if(projectData.urlInstruction[lang.lang])
-                            div(class='img-caption') #{projectData.urlInstruction[lang.lang]}
-                        else
-                            div(class='img-caption') #{projectData.urlInstruction.en}
-                    if (projectData.prints)
-                        a(href=projectData.prints target='_blank')
-                            | #{lang.photo.prints}
-                            | &raquo;
-                    if (projectData.pdf)
-                        a(href=projectData.pdf target='_blank')
-                            | #{lang.design.pdf}
-                            | &raquo;
-                    if(projectData.tech)
-                        div(id='project-tech-d' class='project-tech')
-                            h3 #{lang.project.built}
-                            div(id='project-tech-list-d' class='project-tech-list')
-                                each v in projectData.tech
-                                    div(class='project-tech-item')
-                                        | &#8226;&nbsp;
-                                        | #{v}
-            //- Project Viewer
-            div(class='col-12 col-md-8 col-xl-9')
-                div(id='project-viewer' class='section')
-                    if (projectData.contentType == 'html')
-                        if(projectData.content[lang.lang])
-                            div(data-content=projectData.content[lang.lang])
-                        else
-                            div(data-content=projectData.content.en)
-                    if (projectData.contentType == 'img')
-                        div(data-img=projectData.content)
-            //- Tech Summary (Mobile)
-            if(projectData.tech)
-                div(class='col-12 col-md-4 col-xl-3')
-                div(class='col-12 col-md-8 col-xl-9')
-                    div(id='project-tech-m' class='project-tech section')
-                        h3 #{lang.project.built}
-                        if(projectData.tech.length > 1)
-                            div(id='project-tech-list-m' class='project-tech-list flex-spacing-container')
-                                each v in projectData.tech
-                                    div(class='project-tech-item')
-                                        | &#8226;&nbsp;
-                                        | #{v}
-                        else
-                            div(id='project-tech-list-m' class='project-tech-list')
-                                each v in projectData.tech
-                                    div(class='project-tech-item')
-                                        | &#8226;&nbsp;
-                                        | #{v}
+	include includes/nav.pug
+	div#content.container.flex-grow.scrollable-content
+		//- Nav Menu
+		div#project-nav.row
+			div.col-4.col-xl-3
+				div#project-nav-tabContainer.nav.flex-column.nav-pills.section(role='tablist' aria-orientation='vertical')
+					//- Here, k is a category id and v is category data in full.
+					each v, k in manifest
+						unless (k == 'default')
+							a.project-nav-tab.nav-link(id='project-nav-tab-' + k class=(k == activeCat ? 'active' : '') href='#project-nav-cat-' + k data-toggle='pill' data-caturi=rootDir + activePage + '/' + k  role='tab' aria-controls='project-nav-cat-' + k aria-selected='true')
+								if (v.category[lang.lang])
+									| #{v.category[lang.lang]}
+								else if (v.category.en)
+									| #{v.category.en}
+			//- Begin making the tab panes for nav.
+			div.col-8.col-xl-9
+				div#project-nav-tabContent.project-nav-content.tab-content.section
+					each v, k in manifest
+						unless (k == 'default')
+							div.project-nav-cat.tab-pane.fade(id='project-nav-cat-' + k class=(k == activeCat ? 'show active' : '')  role='tabpanel' aria-labelledby='project-nav-tab-' + k)
+								include ./includes/project-nav.pug
+		//- Project Description
+		div.row.align-items-start.justify-content-center
+			div.col-12.col-md-4.col-xl-3
+				div#project-description.section
+					h2.alight #{projectData.name}
+					if (projectData.subtitle && projectData.subtitle.en)
+						h3.adark #{(projectData.subtitle[lang.lang] ? projectData.subtitle[lang.lang] : projectData.subtitle.en)}
+					if (projectData.description && projectData.description.text && projectData.description.text.en)
+						hr
+						- var content = (projectData.description.text[lang.lang] ? projectData.description.text[lang.lang] : projectData.description.text.en);
+						each v in content
+							p #{v}
+					if (projectData.url)
+						a(href=projectData.url target='_blank')
+							| #{projectData.url}
+					if (projectData.urlInstruction && projectData.urlInstruction.en)
+						div.img-caption #{(projectData.urlInstruction[lang.lang] ? projectData.urlInstruction[lang.lang] : projectData.urlInstruction.en)}
+					if (projectData.prints)
+						a(href=projectData.prints target='_blank')
+							| #{lang.photo.prints}
+							| &raquo;
+					if (projectData.pdf)
+						a(href=projectData.pdf target='_blank')
+							| #{lang.design.pdf}
+							| &raquo;
+					if(projectData.tech)
+						div#project-tech-d.project-tech
+							h3 #{lang.project.built}
+							div.project-tech-list-d.project-tech-list
+								each v in projectData.tech
+									div.project-tech-item
+										| &#8226;&nbsp;
+										| #{v}
+			//- Project Viewer
+			div.col-12.col-md-8.col-xl-9
+				div#project-viewer.section
+					if (projectData.contentType == 'html')
+						div(data-content=(projectData.content[lang.lang] ? projectData.content[lang.lang] : projectData.content.en))
+					if (projectData.contentType == 'img')
+						div(data-img=projectData.content)
+			//- Tech Summary (Mobile)
+			if(projectData.tech)
+				div.col-12.col-md-4.col-xl-3
+				div.col-12.col-md-8.col-xl-9
+					div#project-tech-m.project-tech.section
+						h3 #{lang.project.built}
+						div#project-tech-list-m.project-tech-list(class=(projectData.tech.length > 1 ? 'flex-spacing-container' : ''))
+							each v in projectData.tech
+								div.project-tech-item
+									| &#8226;&nbsp;
+									| #{v}
 
-    include includes/footer.pug
-    script(src='/static/js/project.js')
+	include includes/footer.pug
+	script(src='/static/js/project.js')
