--- a/app/views/error/error.pug
+++ b/app/views/error/error.pug
@@ -1,13 +1,13 @@
 include ../includes/header.pug
 
-body
+body(style='background: #030303 url("/static/media/bg/' + bg + '.jpg") center/cover no-repeat')
 	include ../includes/nav.pug
-	div(id='content' class='container single-row-center-container')
-		div(class='row align-items-center justify-content-center flex-column')
-			div(id='home-logo')
+	div#content.container.d-flex.align-items-center.justify-content-center.flex-grow
+		div.row.align-items-center.justify-content-center.flex-column
+			div#home-logo
 				img(src='/static/media/carrievrtis-logo.png' alt='Carrie Vrtis Logo')
-			div(id='error-text' class='text-shadow text-center')
-					h1(class='alight') Error #{errorCode}
+			div#error-text.text-shadow.text-center
+					h1.alight Error #{errorCode}
 					h2 #{lang.error[errorCode].message}
 					h3 #{lang.error[errorCode].instruction}
 	include ../includes/footer.pug
