--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -1,16 +1,17 @@
-include includes/header.pug
-
-body(style='background: #030303 url("/static/media/bg/' + bg + '.jpg") center/cover no-repeat')
-	include includes/nav.pug
-	div#content.container.d-flex.align-items-center.justify-content-center.flex-grow
-		div.row.align-items-center.justify-content-center.flex-column.flex-md-row
-			div#home-logo
-				img(src='/static/media/carrievrtis-logo.png' alt='Carrie Vrtis Logo')
-			div#home-text.text-shadow.text-center
-				h1 #{lang.home.intro.start}
-					span.alight #{lang.home.intro.end}
-				h2 #{lang.home.subtext.start}
-					span#swaptext.adark #{lang.home.subtext.end[0]}
-				h3
-					a(href=rootDir + 'about') #{lang.home.aboutlink} &raquo;
-	include includes/footer.pug
+doctype html
+html(lang=lang.lang)
+	include ../includes/header.pug
+	body(style='background: #030303 url("/static/media/bg/' + bg + '.jpg") center/cover no-repeat')
+		include includes/nav.pug
+		div#content.container.d-flex.align-items-center.justify-content-center.flex-grow
+			div.row.align-items-center.justify-content-center.flex-column.flex-md-row
+				div#home-logo
+					img(src='/static/media/carrievrtis-logo.png' alt='Carrie Vrtis Logo')
+				div#home-text.text-shadow.text-center
+					h1 #{lang.home.intro.start}
+						span.alight #{lang.home.intro.end}
+					h2 #{lang.home.subtext.start}
+						span#swaptext.adark #{lang.home.subtext.end[0]}
+					h3
+						a(href=rootDir + 'about') #{lang.home.aboutlink} &raquo;
+		include includes/footer.pug
