Cleaned up template includes.

--- a/app/views/contact.pug
+++ b/app/views/contact.pug
@@ -1,8 +1,8 @@
 doctype html
 html(lang=lang.lang)
-	include ../includes/header.pug
+	include ./includes/header.pug
 	body(style='background: #030303 url("/static/media/bg/' + bg + '.jpg") center/cover no-repeat')
-		include includes/nav.pug
+		include ./includes/nav.pug
 		div#content.container.flex-grow.scrollable-content
 			div.row.align-items-start.justify-content-center
 				div.col-10
@@ -61,4 +61,4 @@ html(lang=lang.lang)
 								div.col
 									input#contact-submit.form-control(type='submit' value='Send')
 
-		include includes/footer.pug
+		include ./includes/footer.pug
