--- a/app/views/project.pug
+++ b/app/views/project.pug
@@ -1,8 +1,8 @@
 doctype html
 html(lang=lang.lang)
-	include ../includes/header.pug
+	include ./includes/header.pug
 	body(style='background: #030303 url("/static/media/bg/' + bg + '.jpg") center/cover no-repeat')
-		include includes/nav.pug
+		include ./includes/nav.pug
 		div#content.container.flex-grow.scrollable-content
 			//- Nav Menu
 			div#project-nav.row
@@ -75,5 +75,5 @@ html(lang=lang.lang)
 										| &#8226;&nbsp;
 										| #{v}
 
-		include includes/footer.pug
+		include ./includes/footer.pug
 		script(src='/static/js/project.js')
