--- a/app/views/about.pug
+++ b/app/views/about.pug
@@ -1,8 +1,8 @@
 doctype html
 html(lang=lang.lang)
-	include ../includes/header.pug
+	include ./includes/header.pug
 	body(style='background: #030303 url("/static/media/bg/' + bg + '.jpg") center/cover no-repeat')
-		include includes/nav.pug
+		include ./includes/nav.pug
 		div#content.container.flex-grow.scrollable-content
 			div.row.align-items-start.justify-content-center
 				div.col-10.col-md-6.col-lg-5
@@ -42,4 +42,4 @@ html(lang=lang.lang)
 								| #{lang.about.social.resume}
 								| &raquo;
 
-		include includes/footer.pug
+		include ./includes/footer.pug
