--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -1,8 +1,8 @@
 doctype html
 html(lang=lang.lang)
-	include ../includes/header.pug
+	include ./includes/header.pug
 	body(style='background: #030303 url("/static/media/bg/' + bg + '.jpg") center/cover no-repeat')
-		include includes/nav.pug
+		include ./includes/nav.pug
 		div#content.container.d-flex.align-items-center.justify-content-center.flex-grow
 			div.row.align-items-center.justify-content-center.flex-column.flex-md-row
 				div#home-logo
@@ -14,4 +14,4 @@ html(lang=lang.lang)
 						span#swaptext.adark #{lang.home.subtext.end[0]}
 					h3
 						a(href=rootDir + 'about') #{lang.home.aboutlink} &raquo;
-		include includes/footer.pug
+		include ./includes/footer.pug
