Updated About, Code.

--- a/app/views/about.pug
+++ b/app/views/about.pug
@@ -33,7 +33,7 @@ html(lang=lang.lang)
 								img.about-social-icon(src='/static/media/social/facebook.png' alt='Facebook')
 							a.about-social-link(href='https://twitter.com/BRBCarrying' target='_blank')
 								img.about-social-icon(src='/static/media/social/twitter.png' alt='Twitter')
-							a.about-social-link(href='https://www.linkedin.com/in/carrie-vrtis-aa4404119/' target='_blank')
+							a.about-social-link(href='https://www.linkedin.com/in/carrie-vrtis/' target='_blank')
 								img.about-social-icon(src='/static/media/social/linkedin.png' alt='LinkedIn')
 							a.about-social-link(href='https://github.com/carriejv' target='_blank')
 								img.about-social-icon(src='/static/media/social/github.png' alt='Github')
